# lpsolve

./: CMakeLists.txt  dist.info
cmake/: lpsolve.cmake
